[package]
name = "SOS-Docs"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
lazy_static = { version = "*", features = ["spin_no_std"] }
spin = "*"
x86_64 = "*"
uart_16550 = "*"

[package.metadata.bootimage]
test-success-exit-code = 33
test-timeout = 5
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
